fix: blurred background for toontjehoger body class

--- a/frontend/src/components/ToontjeHoger/ToontjeHoger.scss
+++ b/frontend/src/components/ToontjeHoger/ToontjeHoger.scss
@@ -225,3 +225,8 @@
         }
     }
 }
+
+body.toontjehoger,
+body.toontjehoger .aha__page {
+    background-image: url("/public/images/background-blur.webp");
+}
